# strife-native

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  main.cpp  run.sh
core/: CMakeLists.txt
core/include/: Component.h  Dispatcher.h  Engine.h  Entity.h  Event.h  Factory.h  IIterator.h  IStorage.h  Message.h  Messenger.h  Scene.h  Storage.h  System.h  Unique.h
core/src/: Component.cpp  Dispatcher.cpp  Engine.cpp  Entity.cpp  Event.cpp  IStorage.cpp  Messenger.cpp  Scene.cpp  Unique.cpp
math/: CMakeLists.txt
project/: CMakeLists.txt
project/assets/components/include/: Transform.h
project/assets/components/src/: Body.cpp  Transform.cpp
project/assets/scenes/: default.json
project/assets/scripts/include/: Math.h
project/assets/systems/include/: Physics.h
strife/: .clang-format  CMakeLists.txt  build.sh  conanfile.py  index.js  main.cpp  package.json  scene.json
strife/buildem/: CMakeCache.txt  conanbuildinfo.gcc  conanbuildinfo.txt  conaninfo.txt
strife/conan/emsdk/: conanfile.py
strife/conan/metastuff/: conanfile.py
strife/core/: CMakeLists.txt
strife/core/include/: Common.h  Component.h  Context.h  Data.h  Dispatcher.h  Engine.h  Entity.h  EntityMap.h  Event.h  Hierarchy.h  IIterator.h  IStorage.h  ISystem.h  JsonCast.h  JsonCast.inl  Message.h  Messenger.h  Scene.h  Storage.h  System.h  Timer.h  Unique.h
strife/core/src/: Component.cpp  Context.cpp  Data.cpp  Dispatcher.cpp  Engine.cpp  Entity.cpp  EntityMap.cpp  Event.cpp  IStorage.cpp  ISystem.cpp  Messenger.cpp  Scene.cpp  Storage.cpp  StringCast.cpp  Unique.cpp
strife/nbind/: CMakeLists.txt  bindings.cpp
strife/project/: CMakeLists.txt
strife/project/assets/images/: ball.json  numbers.json
strife/project/assets/scenes/: default.json
strife/project/include/components/: Body.h  Transform.h
strife/project/include/systems/: Physics.h
strife/project/include/utility/: Math.h
strife/project/scenes/: default.json
strife/project/scripts/components/: Hierarchy.cpp  Hierarchy.h  Sprite.cpp  Sprite.h  Transform.cpp  Transform.h
strife/project/scripts/events/: BeginGui.cpp  BeginGui.h  FinishGui.cpp  FinishGui.h  OnGui.cpp  OnGui.h  ParentChanged.cpp  ParentChanged.h  RenderEvent.cpp  RenderEvent.h  SelectEntity.cpp  SelectEntity.h  UpdateEvent.cpp  UpdateEvent.h
strife/project/scripts/forms/: MainWindow.cpp  MainWindow.h  mainwindow.ui
strife/project/scripts/systems/: ComponentList.cpp  ComponentList.h  Editor.cpp  Editor.h  EntityList.cpp  EntityList.h  HierarchySystem.cpp  HierarchySystem.h  ImguiSystem.cpp  ImguiSystem.h  SpriteAnimation.cpp  SpriteAnimation.h  WindowSystem.cpp  WindowSystem.h
strife/project/scripts/utility/: Serialization.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_sdl.cpp  imgui_sdl.h
strife/project/src/components/: Body.cpp  Transform.cpp
strife/project/src/systems/: Physics.cpp
test/: CMakeCache.txt  Makefile  cmake_install.cmake
test/core/: Makefile  cmake_install.cmake
test/project/: Makefile  cmake_install.cmake
v0.0/strife/: CMakeLists.txt  build.sh  main.cpp
v0.0/strife/core/: CMakeLists.txt
v0.0/strife/core/include/: Component.h  Context.h  Data.h  Engine.h  Scene.h  Storage.h  Timer.h
v0.0/strife/core/src/: Data.cpp  Dispatcher.cpp  Entity.cpp  IStorage.cpp  Scene.cpp
v0.1/: CMakeLists.txt  main.cpp
v0.1/buildem/: conanbuildinfo.cmake
v0.1/core/: CMakeLists.txt
v0.1/core/include/: Component.h  Delegate.h  Entity.h  IStorage.h  ISystem.h  Messenger.h  Scene.h  Storage.h  System.h  Unique.h
v0.1/core/src/: Component.cpp  Entity.cpp  IStorage.cpp  Scene.cpp  Unique.cpp
v0.1/project/scenes/: default.json
v0.1/project/scripts/components/: Body.cpp  Body.h  Transform.h
v0.1/project/scripts/systems/: Physics.h
v0.2/: CMakeLists.txt  build.sh  main.cpp
v0.2/core/include/: Component.h  Dispatcher.h  Entity.h  Event.h  IIterator.h  IStorage.h  ISystem.h  Messenger.h  Scene.h  Storage.h  System.h  Unique.h
v0.2/core/src/: Component.cpp  Dispatcher.cpp  Entity.cpp  Event.cpp  IStorage.cpp  Messenger.cpp  Scene.cpp  Timer.cpp  Unique.cpp
v0.3/: CMakeLists.txt
v0.3/core/include/: Dispatcher.h  Engine.h  ISystem.h  Scene.h  System.h
v0.3/core/src/: Scene.cpp  System.cpp
v0.3/project/scripts/components/: Transform.h
v0.4/: build.sh  conanfile.py  main.cpp
v0.4/core/include/: Component.h  Engine.h  Event.h  IIterator.h  Storage.h  System.h
v0.4/core/src/: Component.cpp  Entity.cpp  Event.cpp  Scene.cpp  Unique.cpp
v0.4/project/: CMakeLists.txt
v0.4/project/scripts/components/: Transform.h
v0.4/project/scripts/utility/: Serialization.h
v0.4/scripts/components/: Transform.cpp
